Bug 485915 - Clock digits are not localized
Summary: Clock digits are not localized
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-21 18:18 UTC by Zayed Al-Saidi
Modified: 2026-02-24 01:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments
Status as of 21-April-24 (43.21 KB, image/png)
2024-04-21 18:18 UTC, Zayed Al-Saidi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zayed Al-Saidi 2024-04-21 18:18:00 UTC
Created attachment 168755 [details]
Status as of 21-April-24

This is a regression from KDE Plasma 5. The clock text number is not following the system locale. My locale is ar_OM.UTF-8 which follows Eastern Arabic numerals. However, the time is displayed in English numerals. 

Please note that the tool tip is displaying the numbers correctly in my locale. 

I'm using KDE neon unstable git20240420.
Comment 1 Nikos Platis 2024-07-03 18:24:55 UTC
Confirming in Plasma 6.1.1: My system locale is Greek, but time in digital clock is displayed in US locale (e.g. 9:24 PM). Confirming also that the tooltip follows the greek locale correctly.
Comment 2 Nate Graham 2024-07-30 17:27:44 UTC
Can reproduce with `LANG=ar_OM plasmashell --replace`

Numbers in other places look correct, e.g. the calendar days, or temperature in the weather widget. Seems to be limited to clock digits.
Comment 3 pallaswept 2025-02-26 14:18:25 UTC
I have a possible fix for this. It uses the 'Number' format, rather than the 'Time' format, that's just how Qt determined it. Is that acceptable?
Comment 4 Nate Graham 2025-04-08 15:23:26 UTC
Maybe? Might as well submit and we'll see what people think.
Comment 5 Bug Janitor Service 2025-11-22 13:16:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6040
Comment 6 Fushan Wen 2026-02-24 01:52:36 UTC
Git commit 42c1be6aa611f5522f2ffcba8469f00e1852ea50 by Fushan Wen.
Committed on 24/02/2026 at 01:51.
Pushed by fusionfuture into branch 'master'.

applets/digital-clock: localize clock digits

The clock text number now follows the system locale.

The solution is using Qt.locale().toString suggested by https://github.com/quickshell-mirror/quickshell/issues/176#issuecomment-3180175653
FIXED-IN: 6.6.1

M  +1    -1    applets/digital-clock/DigitalClock.qml
M  +2    -2    applets/digital-clock/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/42c1be6aa611f5522f2ffcba8469f00e1852ea50
Comment 7 Fushan Wen 2026-02-24 01:54:37 UTC
Git commit ab9a920f1ba85348d232e8f47395325976344fe3 by Fushan Wen.
Committed on 24/02/2026 at 01:53.
Pushed by fusionfuture into branch 'Plasma/6.6'.

applets/digital-clock: localize clock digits

The clock text number now follows the system locale.

The solution is using Qt.locale().toString suggested by https://github.com/quickshell-mirror/quickshell/issues/176#issuecomment-3180175653
FIXED-IN: 6.6.1


(cherry picked from commit 42c1be6aa611f5522f2ffcba8469f00e1852ea50)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>

M  +1    -1    applets/digital-clock/DigitalClock.qml
M  +2    -2    applets/digital-clock/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/ab9a920f1ba85348d232e8f47395325976344fe3