applets/digital-clock: localize clock digits

The clock text number now follows the system locale.
A special value type is created to peform the localization.

BUG: 485915